# 000_CMake_Template_Repository

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: README.md
src/: CMakeLists.txt  README.md
src/geometry/: CMakeLists.txt  geometrie_error.hpp  triangle.cpp  triangle.hpp
src/main/: CMakeLists.txt  main.cpp
src/module_1/: CMakeLists.txt  something.cpp  something.hpp  src_1.cpp  src_1.hpp
test/: CMakeLists.txt  README.md  test_rectangle.cpp  test_something.cpp
